# S_fixed

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  S_fixed.h  S_fixedTests.c
include/: S_fixed.h
src/: S_fixed.c  S_fixed.h  S_fixedTests.c
